# rsvenv

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: arguments.rs  configuration.rs  errors.rs  main.rs  virtualenv.rs
src/commands/: activate.rs  chdir_hook.rs  create.rs  deactivate.rs  delete.rs  init.rs  install.rs  list.rs  mod.rs  use_command.rs
src/shell/: bash.rs  fish.rs  mod.rs  zsh.rs
src/virtualenv/: local.rs  pyenv.rs  python.rs  rsenv.rs  traits.rs  utils.rs
