[package]
name = "rsvenv"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
config = { version = "0.14.0", features = ["yaml"] }
error-stack = "0.4.1"
glob = "0.3.1"
itertools = "0.12.1"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_derive = "1.0.197"
shellexpand = "3.1.0"
simplelog = { version = "0.12.2", features = ["paris"] }
sysinfo = "0.30.7"

